--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 altgraph==0.17.4
 blinker==1.9.0
 bottle==0.13.2
+cachelib==0.13.0
 click==8.1.7
 Flask==3.1.0
+Flask-Session==0.8.0
 greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+msgspec==0.18.6
 packaging==24.2
 proxy_tools==0.1.0
 pyinstaller==6.11.1
